--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,14 +15,17 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version-file: 'go.mod'
+          go-version: '1.22'
           cache: true
+
+      - name: Verify Go version
+        run: go version
 
       - name: Download dependencies
         run: go mod download
 
       - name: Build
-        run: go build -v ./...
+        run: go build -v ./cmd/tf-mirror
 
       - name: Test
         run: go test -v ./...
@@ -35,7 +38,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version-file: 'go.mod'
+          go-version: '1.22'
           cache: true
 
       - name: golangci-lint
