--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,14 +22,14 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version-file: 'go.mod'
+          go-version: '1.22'
           cache: true
 
       - name: Download dependencies
         run: go mod download
 
       - name: Build
-        run: go build -v ./...
+        run: go build -v ./cmd/tf-mirror
 
       - name: Test
         run: go test -v ./...
