Move main.go to root, update build paths

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         run: go mod download
 
       - name: Build
-        run: go build -v ./cmd/tf-mirror
+        run: go build -v .
 
       - name: Test
         run: go test -v ./...
