--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,38 +73,25 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Setup SSH
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+      - name: Add hosts to known_hosts
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519
-          
-          # Add jump host and target to known_hosts
-          ssh-keyscan -H 51.250.11.142 >> ~/.ssh/known_hosts 2>/dev/null
-          
-          # SSH config for jump host
-          cat >> ~/.ssh/config << EOF
-          Host edge-gateway
-            HostName 51.250.11.142
-            User master
-            IdentityFile ~/.ssh/id_ed25519
-            StrictHostKeyChecking no
-
-          Host web-server
-            HostName 10.0.2.10
-            User master
-            IdentityFile ~/.ssh/id_ed25519
-            ProxyJump edge-gateway
-            StrictHostKeyChecking no
-          EOF
+          ssh-keyscan -H ${{ secrets.JUMP_HOST_IP }} >> ~/.ssh/known_hosts
+          ssh -o StrictHostKeyChecking=accept-new ${{ secrets.DEPLOY_USER }}@${{ secrets.JUMP_HOST_IP }} \
+            "ssh-keyscan -H ${{ secrets.WEB_SERVER_IP }}" >> ~/.ssh/known_hosts
 
       - name: Deploy to web-server
+        env:
+          JUMP_HOST: ${{ secrets.JUMP_HOST_IP }}
+          WEB_SERVER: ${{ secrets.WEB_SERVER_IP }}
+          DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
         run: |
-          ssh web-server << 'ENDSSH'
+          ssh -o ProxyJump=${DEPLOY_USER}@${JUMP_HOST} ${DEPLOY_USER}@${WEB_SERVER} << 'ENDSSH'
             set -e
-            
-            # Create directories if not exist
-            sudo mkdir -p /opt/tf-mirror/certs /var/cache/tf-mirror
-            sudo chown -R master:master /opt/tf-mirror /var/cache/tf-mirror
             
             cd /opt/tf-mirror
             
@@ -112,16 +99,20 @@ jobs:
             if [ -f docker-compose.yml ]; then
               docker compose pull
               docker compose up -d
-              echo "✅ terraform-mirror updated to ${{ github.ref_name }}"
+              echo "✅ terraform-mirror deployed successfully"
             else
               echo "⚠️ docker-compose.yml not found. First deploy requires manual setup."
-              echo "   Copy docker-compose.yml and nginx.conf to /opt/tf-mirror/"
-              exit 0
+              exit 1
             fi
           ENDSSH
 
       - name: Verify deployment
+        env:
+          JUMP_HOST: ${{ secrets.JUMP_HOST_IP }}
+          WEB_SERVER: ${{ secrets.WEB_SERVER_IP }}
+          DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
         run: |
           sleep 5
-          ssh web-server 'docker ps | grep tf-mirror || echo "Container not running yet"'
+          ssh -o ProxyJump=${DEPLOY_USER}@${JUMP_HOST} ${DEPLOY_USER}@${WEB_SERVER} \
+            'docker ps | grep tf-mirror || echo "Container not running yet"'
 
